<resources>
    <string name="app_name">DigitalHouse</string>
    <string name="login">Login</string>
    <string name="dica_usuario">Nome do usuário</string>
    <string name="dica_senha">Senha</string>
    <string name="se_cadastrar">Não tem conta? Cadastre-se</string>
    <string name="email">Email</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="info">info</string>
    <string name="back_button">Back button</string>
    <string name="cadastrar_maiusculo">CADASTRAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="gastos">Gastos</string>
    <string name="entradas">Entradas</string>
    <string name="mywallet">MyWallet</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="data_x_hora">Data x hora</string>
    <string name="valor">Valor</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ajuda">Ajuda</string>
    <string name="profile">Profile</string>
    <string name="categoria_minusculo">categoria</string>
    <string name="descricao_minusculo">descricao</string>
    <string name="data_hora">Data/Hora</string>
</resources>