<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/round_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GastosFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_maiusculo"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPurple"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descricao_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:backgroundTint="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/categoria_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/categoria"
                android:backgroundTint="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_x_hora"
                android:backgroundTint="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:inputType="datetime"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:prefixText="R$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valor_gasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor"
                android:backgroundTint="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botao_cadastrar_gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/round_login_button"
            android:text="@string/cadastrar_maiusculo"/>

    </LinearLayout>

</FrameLayout>