<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:background="@drawable/round_login"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/dica_usuario"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dica_senha"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botao_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/round_button"
        android:theme="@style/Button"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ir_para_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorAccent"
            android:text="@string/se_cadastrar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewGoogle"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/imageViewFacebook"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/imageViewInstagram"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_instagram" />

    </LinearLayout>

</LinearLayout>
