<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_home"
            android:drawableStart="@drawable/ic_baseline_house_24"
            android:textColor="#FFF"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:background="@drawable/home_button_default"
            android:text="@string/home"/>

        <Button
            android:id="@+id/button_entradas"
            android:drawableStart="@drawable/ic_baseline_input_24"
            android:textColor="#FFF"
            android:textSize="17sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/home_button_default"
            android:text="@string/entradas"/>

        <Button
            android:id="@+id/button_gastos"
            android:drawableStart="@drawable/ic_baseline_attach_money_24"
            android:textColor="#FFF"
            android:textSize="17sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/home_button_default"
            android:text="@string/gastos"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/mainPane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="595dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:maxImageSize="67dp" />

    </FrameLayout>




</LinearLayout>